# vidrot

./: .gitignore  AUTHORS  ChangeLog  CodingStyle  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  vidrot.desktop.in.in  vidrot.doap
debian/: changelog  control  copyright  rules  shlibs.local  vidrot.install
po/: Makevars  POTFILES.in  POTFILES.skip
src/: main.cc  main_window.cc  main_window.cpp  main_window.h  vidrot.c  vidrot.cc  vidrot.cpp  vidrot_preview.cc  vidrot_preview.h
